--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -20,9 +20,9 @@ anonymousKey=${anonymousKey}
 
 adminUser=${adminUser}
 
-scheme=https
-host=syncope-vm2.apache.org
-port=443
+scheme=http
+host=localhost
+port=9080
 rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
