Fixed #6 Customizing Sidebar

--- a/app/src/main/resources/enduser.properties
+++ b/app/src/main/resources/enduser.properties
@@ -27,6 +27,9 @@ rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
 
+#Sidebar
+sidebar=org.apache.syncope.client.enduser.panels.Sidebar
+
 # Page
 page.profile=org.apache.syncope.client.enduser.pages.Dashboard
 page.edituser=org.apache.syncope.client.enduser.pages.EditUser
