--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -20,12 +20,15 @@ anonymousKey=${anonymousKey}
 
 adminUser=${adminUser}
 
-scheme=http
+scheme=https
 host=localhost
-port=9080
+port=8443
 rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
+
+#Sidebar
+sidebar=org.apache.syncope.client.enduser.panels.UniFiSidebar
 
 # Page
 page.profile=org.apache.syncope.client.enduser.pages.Dashboard
