--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication.properties
@@ -92,3 +92,4 @@ attributes.plain=Plain Attributes
 attributes.virtual=Virtual Attributes
 captcha=Captcha
 details=Details
+user_request_error=Error during user request. Please contact your administrator
