--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -28,7 +28,7 @@ useGZIPCompression=true
 maxUploadFileSizeMB=5
 
 #Sidebar
-sidebar=org.apache.syncope.client.enduser.panels.UniFiSidebar
+sidebar=org.apache.syncope.client.enduser.panels.Sidebar
 
 # Page
 page.profile=org.apache.syncope.client.enduser.pages.Dashboard
