Upgrading to Syncope 2.1.8

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
   </distributionManagement>
 
   <properties>
-    <syncope.version>2.1.8-SNAPSHOT</syncope.version>
+    <syncope.version>2.1.8</syncope.version>
 
     <bootbox.version>5.4.0</bootbox.version>
     <font-awesome.version>4.7.0</font-awesome.version>
