Fix self registration

--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -40,7 +40,7 @@ page.editsecurityquestion=org.apache.syncope.client.enduser.pages.EditChangePass
 maxWaitTimeOnApplyChanges=30
 
 x-forward=true
-captcha=true
+captcha=false
 csrf=true
 
 security.headers.X-XSS-Protection=1; mode=block
