--- a/app/pom.xml
+++ b/app/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope</groupId>
     <artifactId>syncope-wicket-enduser</artifactId>
-    <version>2.1.8-SNAPSHOT</version> 
+    <version>2.1.8</version> 
   </parent>
 
   <name>Apache Syncope: Wicket Enduser App</name>
@@ -316,7 +316,7 @@
               </container>
               <configuration>
                 <type>standalone</type>
-                <properties>
+                <properties>            
                   <cargo.jvmargs>
                     -Xdebug -Djaxb.debug=true -Xrunjdwp:transport=dt_socket,address=8004,server=y,suspend=n
                     -Dwicket.configuration=development
