fix snapshot versions, fix syncope rest protocol and port

--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -20,9 +20,9 @@ anonymousKey=${anonymousKey}
 
 adminUser=${adminUser}
 
-scheme=https
+scheme=http
 host=localhost
-port=8443
+port=9080
 rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
