--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -20,9 +20,9 @@ anonymousKey=${anonymousKey}
 
 adminUser=${adminUser}
 
-scheme=https
+scheme=http
 host=localhost
-port=8443
+port=9080
 rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
@@ -40,7 +40,7 @@ page.editsecurityquestion=org.apache.syncope.client.enduser.pages.EditChangePass
 maxWaitTimeOnApplyChanges=30
 
 x-forward=true
-captcha=true
+captcha=false
 csrf=true
 
 security.headers.X-XSS-Protection=1; mode=block
