--- a/app/src/test/resources/enduser.properties
+++ b/app/src/test/resources/enduser.properties
@@ -20,9 +20,9 @@ anonymousKey=${anonymousKey}
 
 adminUser=${adminUser}
 
-scheme=http
+scheme=https
 host=localhost
-port=9080
+port=8443
 rootPath=/syncope/rest/
 useGZIPCompression=true
 maxUploadFileSizeMB=5
