#11 Change password page

--- a/app/src/main/resources/enduser.properties
+++ b/app/src/main/resources/enduser.properties
@@ -34,7 +34,7 @@ sidebar=org.apache.syncope.client.enduser.panels.Sidebar
 page.profile=org.apache.syncope.client.enduser.pages.Dashboard
 page.edituser=org.apache.syncope.client.enduser.pages.EditUser
 page.editchangepassword=org.apache.syncope.client.enduser.pages.EditChangePassword
-page.editsecurityquestion=org.apache.syncope.client.enduser.pages.EditChangePassword
+page.editsecurityquestion=org.apache.syncope.client.enduser.pages.EditSecurityQuestion
 
 # Max wait time on apply changes from modals/wizards (given in seconds)
 maxWaitTimeOnApplyChanges=30
