#11 Fix login and labels

--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication.properties
@@ -93,3 +93,13 @@ attributes.virtual=Virtual Attributes
 captcha=Captcha
 details=Details
 user_request_error=Error during user request. Please contact your administrator
+
+page.home=Home
+page.changePassword=Change Password
+page.editSecurityQuestion=Edit Security Question
+page.edituser=Edit User
+page.confirmPasswordReset=Confirm Password Reset
+page.selfPwdReset=Password Reset
+page.selfRegistration=Registration
+page.resultPage=Result Page
+page.userRequests=User Requests
