--- a/app/pom.xml
+++ b/app/pom.xml
@@ -243,9 +243,9 @@
         <skipTests>true</skipTests>
         <packaging.type>war</packaging.type>
         
-        <secretKey>1abcdefghilmnopqrstuvz2!</secretKey>
-        <anonymousKey>anonymousKey</anonymousKey>
-        <jwsKey>5UUxuVlxFc9LKYbNj9wBCHkdCQJDyQTX704y7Hg8O2pRlkgfROjLgIuHRquNe2cyDWTr7KHI052nXRTy0yMlX4HuKeVzxt0K7zTt9yINOtI5Wm1uipqoXRWa6hqbnIxN</jwsKey>
+        <secretKey>pwdunifi12345678</secretKey>
+        <anonymousKey>pwdunifi12345678</anonymousKey>
+        <jwsKey>pwdunifi12345678</jwsKey>
       </properties>
 
       <dependencies>
@@ -316,8 +316,10 @@
                 <systemProperties>
                   <java.security.egd>file:/dev/./urandom</java.security.egd>
                   <java.util.secureRandomSeed>true</java.util.secureRandomSeed>
-                  <javax.net.ssl.trustStore>/home/marco/Work/GFS/syncope/fit/src/test/resources/keystore</javax.net.ssl.trustStore>
-                  <javax.net.ssl.trustStorePassword>password</javax.net.ssl.trustStorePassword>
+                  
+                  <javax.net.ssl.trustStore>/home/marco/Work/UniFi/IAM/fit/src/main/resources/keystore</javax.net.ssl.trustStore>
+                  <javax.net.ssl.trustStorePassword>keyst0r3</javax.net.ssl.trustStorePassword>
+                  
                 </systemProperties>
               </container>
               <configuration>
@@ -329,11 +331,11 @@
                   <cargo.protocol>https</cargo.protocol>
                   <!--<cargo.tomcat.connector.clientAuth>optional</cargo.tomcat.connector.clientAuth>-->
                   <cargo.tomcat.connector.sslProtocol>TLS</cargo.tomcat.connector.sslProtocol>
-                  
-                  <cargo.tomcat.connector.keystoreFile>/home/marco/Work/GFS/syncope/fit/src/test/resources/keystore</cargo.tomcat.connector.keystoreFile>
-                  <cargo.tomcat.connector.keystorePass>password</cargo.tomcat.connector.keystorePass>
-                  <cargo.tomcat.connector.keyAlias>tomcat</cargo.tomcat.connector.keyAlias>
-                  
+
+                  <cargo.tomcat.connector.keystoreFile>/home/marco/Work/UniFi/IAM/fit/src/main/resources/keystore</cargo.tomcat.connector.keystoreFile>
+                  <cargo.tomcat.connector.keystorePass>keyst0r3</cargo.tomcat.connector.keystorePass>
+                  <cargo.tomcat.connector.keyAlias>Tomcat</cargo.tomcat.connector.keyAlias>
+
                   <cargo.tomcat.httpSecure>true</cargo.tomcat.httpSecure>
                   <cargo.jvmargs>
                     -Xdebug -Djaxb.debug=true -Xrunjdwp:transport=dt_socket,address=8004,server=y,suspend=n
