--- a/common-ui/pom.xml
+++ b/common-ui/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>net.tirasa.syncope</groupId>
     <artifactId>syncope-wicket-enduser</artifactId>
-    <version>2.1.8-SNAPSHOT</version> 
+    <version>2.1.8.0</version> 
   </parent>
  
   <name>Apache Syncope: Wicket Enduser Common UI</name>
