--- a/ext/saml2sp/pom.xml
+++ b/ext/saml2sp/pom.xml
@@ -72,6 +72,14 @@
         <directory>src/main/resources</directory>
         <filtering>true</filtering>
       </resource>
+      <resource>
+        <directory>${rootpom.basedir}</directory>
+        <targetPath>META-INF</targetPath>
+        <includes>
+          <include>LICENSE</include>
+          <include>NOTICE</include>
+        </includes>
+      </resource>
     </resources>
   </build>
 </project>
