--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,17 @@
             </execution>
           </executions>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.3</version>
+          <configuration>
+            <mavenExecutorId>forked-path</mavenExecutorId>
+            <useReleaseProfile>false</useReleaseProfile>
+            <arguments>-Psonatype-oss-release</arguments>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     
@@ -343,7 +354,7 @@
 
   <profiles>
     <profile>
-      <id>release-sign-artifacts</id>
+      <id>sonatype-oss-release</id>
 
       <activation>
         <property>
@@ -365,6 +376,26 @@
                 <goals>
                   <goal>sign</goal>
                 </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.2.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>${rootpom.basedir}/LICENSE</include>
+                    <include>${rootpom.basedir}/NOTICE</include>
+                  </includes>
+                </configuration>
               </execution>
             </executions>
           </plugin>
