--- a/app/pom.xml
+++ b/app/pom.xml
@@ -219,7 +219,7 @@
       </resource>
       
       <resource>
-        <directory>${basedir}</directory>
+        <directory>${rootpom.basedir}</directory>
         <targetPath>META-INF</targetPath>
         <includes>
           <include>LICENSE</include>
