--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope</groupId>
     <artifactId>syncope-wicket-enduser</artifactId>
-    <version>2.1.9.1-SNAPSHOT</version> 
+    <version>2.1.9.0-SNAPSHOT</version> 
   </parent>
 
   <name>Apache Syncope: Wicket Enduser Docker</name>
@@ -177,6 +177,14 @@
       
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
