--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <description>Apache Syncope Enduser UI built with Apache Wicket</description>
   <groupId>net.tirasa.syncope</groupId>
   <artifactId>syncope-wicket-enduser</artifactId>
-  <version>2.1.9.1-SNAPSHOT</version>
+  <version>2.1.10.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <url>http://syncope.tirasa.net</url>
@@ -102,7 +102,7 @@
   </developers>
 
   <properties>
-    <syncope.version>2.1.9</syncope.version>
+    <syncope.version>2.1.10-SNAPSHOT</syncope.version>
 
     <bootbox.version>5.4.0</bootbox.version>
     <font-awesome.version>4.7.0</font-awesome.version>
