--- a/pom.xml
+++ b/pom.xml
@@ -453,6 +453,16 @@
     </profile>    
   </profiles>
 
+  <repositories>
+    <repository>
+      <id>apache.snapshots</id>
+      <url>https://repository.apache.org/content/repositories/snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <modules>
     <module>common-ui</module>
     <module>app</module>
