--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <description>Apache Syncope Enduser UI built with Apache Wicket</description>
   <groupId>net.tirasa.syncope</groupId>
   <artifactId>syncope-wicket-enduser</artifactId>
-  <version>2.1.11.1-SNAPSHOT</version>
+  <version>2.1.11.1</version>
   <packaging>pom</packaging>
 
   <url>http://syncope.tirasa.net</url>
@@ -42,7 +42,7 @@
     <connection>scm:git:git@github.com:Tirasa/syncope-wicket-enduser.git</connection>
     <url>scm:git:git@github.com:Tirasa/syncope-wicket-enduser.git</url>
     <developerConnection>scm:git:git@github.com:Tirasa/syncope-wicket-enduser.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>syncope-wicket-enduser-2.1.11.1</tag>
   </scm>
 
   <issueManagement>
