--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <description>Apache Syncope Enduser UI built with Apache Wicket</description>
   <groupId>net.tirasa.syncope</groupId>
   <artifactId>syncope-wicket-enduser</artifactId>
-  <version>2.1.12.1-SNAPSHOT</version>
+  <version>2.1.13.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <url>http://syncope.tirasa.net</url>
@@ -102,7 +102,7 @@
   </developers>
 
   <properties>
-    <syncope.version>2.1.12</syncope.version>
+    <syncope.version>2.1.13-SNAPSHOT</syncope.version>
 
     <bootbox.version>5.4.0</bootbox.version>
     <font-awesome.version>4.7.0</font-awesome.version>
@@ -112,7 +112,7 @@
 
     <cargo.log>${log.directory}/cargo.log</cargo.log>
     <cargo.output>${log.directory}/cargo-output.log</cargo.output>
-    <tomcat.version>9.0.60</tomcat.version>
+    <tomcat.version>9.0.69</tomcat.version>
 
     <conf.directory>${project.build.directory}/test-classes</conf.directory>
     <log.directory>${project.build.directory}/log</log.directory>
