--- a/ext/flowable/pom.xml
+++ b/ext/flowable/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope.wicket-enduser</groupId>
     <artifactId>syncope-wicket-enduser-ext</artifactId>
-    <version>2.1.13.0</version>
+    <version>2.1.13.1-SNAPSHOT</version>
   </parent>
 
   <name>Apache Syncope: Wicket Enduser Ext Flowable</name>
