--- a/ext/pom.xml
+++ b/ext/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope</groupId>
     <artifactId>syncope-wicket-enduser</artifactId>
-    <version>2.1.13.0</version> 
+    <version>2.1.13.1-SNAPSHOT</version> 
   </parent>
 
   <name>Apache Syncope: Wicket Enduser Ext</name>
