--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope</groupId>
     <artifactId>syncope-wicket-enduser</artifactId>
-    <version>2.1.13.2</version> 
+    <version>2.1.13.3-SNAPSHOT</version> 
   </parent>
 
   <name>Apache Syncope: Wicket Enduser Docker</name>
