--- a/ext/saml2sp/pom.xml
+++ b/ext/saml2sp/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>net.tirasa.syncope.wicket-enduser</groupId>
     <artifactId>syncope-wicket-enduser-ext</artifactId>
-    <version>2.1.14.0-SNAPSHOT</version>
+    <version>2.1.14.0</version>
   </parent>
 
   <name>Apache Syncope: Wicket Enduser Ext SAML2 SP</name>
